chore: hard wipe azure references
